add register and errors

--- a/src/index.html
+++ b/src/index.html
@@ -14,11 +14,17 @@
         <li>
           <a href="./pages/auth/">Авторизация</a>
         </li>
-        <li><a href="">Регистрация</a></li>
+        <li>
+          <a href="./pages/registration/">Регистрация</a>
+        </li>
         <li><a href="">Список чатов</a></li>
         <li><a href="">Настройки пользователя</a></li>
-        <li><a href="">Страница 404</a></li>
-        <li><a href="">Страница 5**</a></li>
+        <li>
+          <a href="./pages/errors/404.html">Страница 404</a>
+        </li>
+        <li>
+          <a href="./pages/errors/500.html">Страница 5**</a>
+        </li>
       </ul>
     </div>
     <script type="module" src="./main.js"></script>
