--- a/src/pages/auth/index.html
+++ b/src/pages/auth/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div class="auth">
-      <div class="auth-container">
+      <div class="auth__container">
         <h1 class="auth__header">Вход</h1>
         <form class="auth__form">
           <input
@@ -31,8 +31,10 @@
           <button class="auth__buttons_signin">
             Войти
           </button>
-          <span class="auth__buttons_register"
-            >Нет аккаунта?</span
+          <a
+            class="auth__buttons_register"
+            href="../registration/"
+            >Нет аккаунта?</a
           >
         </div>
       </div>
