--- a/src/index.html
+++ b/src/index.html
@@ -12,21 +12,23 @@
     <div id="app">
       <ul>
         <li>
-          <a href="./pages/auth/">Авторизация</a>
+          <a href="/auth/">Авторизация</a>
         </li>
         <li>
-          <a href="./pages/registration/">Регистрация</a>
+          <a href="/registration/">Регистрация</a>
         </li>
-        <li><a href="">Список чатов</a></li>
+        <li>
+          <a href="/chats/">Список чатов</a>
+        </li>
         <li><a href="">Настройки пользователя</a></li>
         <li>
-          <a href="./pages/errors/404.html">Страница 404</a>
+          <a href="/errors/404.html">Страница 404</a>
         </li>
         <li>
-          <a href="./pages/errors/500.html">Страница 5**</a>
+          <a href="/errors/500.html">Страница 5**</a>
         </li>
       </ul>
     </div>
-    <script type="module" src="./main.js"></script>
+    <script type="module" src="/main.js"></script>
   </body>
 </html>
