--- a/src/index.html
+++ b/src/index.html
@@ -1,34 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
-    <title>Vite App</title>
-  </head>
-  <body>
-    <div id="app">
-      <ul>
-        <li>
-          <a href="/auth/">Авторизация</a>
-        </li>
-        <li>
-          <a href="/registration/">Регистрация</a>
-        </li>
-        <li>
-          <a href="/chats/">Список чатов</a>
-        </li>
-        <li><a href="">Настройки пользователя</a></li>
-        <li>
-          <a href="/errors/404.html">Страница 404</a>
-        </li>
-        <li>
-          <a href="/errors/500.html">Страница 5**</a>
-        </li>
-      </ul>
-    </div>
-    <script type="module" src="/main.js"></script>
-  </body>
-</html>
+{{#> main title="Главная" script="main.js"}}
+<div class="main">
+  <ul>
+    <li><a href="./pages/errors/404.html">404</a></li>
+    <li><a href="./pages/errors/500.html">500</a></li>
+  </ul>
+</div>
+{{/main}}
