--- a/src/pages/errors/404.html
+++ b/src/pages/errors/404.html
@@ -1,22 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
-    <style>
-      @import "./errors.scss";
-    </style>
-    <title>404</title>
-  </head>
-  <body>
-    <div class="error">
-      <h1 class="error__header">Ой!</h1>
-      <p class="error__desc">
-        Не могу найти такой страницы
-      </p>
-    </div>
-  </body>
-</html>
+{{#> main title="404" script="./errors.js"}}
+<div class="error">
+	<h1 class="error__header">Ой!</h1>
+	<p class="error__desc">Не могу найти такой страницы</p>
+</div>
+{{/main}}
