--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,9 @@
   <ul>
     <li><a href="./pages/errors/404.html">404</a></li>
     <li><a href="./pages/errors/500.html">500</a></li>
+    <li><a href="./pages/auth/">Авторизация</a></li>
+    <li><a href="./pages/registration/">Регистрация</a></li>
+    <li><a href="./pages/chats/">Чаты</a></li>
   </ul>
 </div>
 {{/main}}
