--- a/src/pages/chats/index.html
+++ b/src/pages/chats/index.html
@@ -1,40 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
-    <style>
-      @import "./chats.scss";
-    </style>
-    <title>Чаты</title>
-  </head>
-  <body>
-    <div class="chats">
-      <div class="chats__leftSide">
-        <div class="chats__leftSide__menu">
-          <a href="" class="chats__leftSide__menu__link"
-            >Профиль</a
-          >
-          <form
-            action=""
-            class="chats__leftSide__menu__form"
-          >
-            <input
-              type="text"
-              class="chats__leftSide__menu__form__input"
-            />
-          </form>
-        </div>
-        <div class="chats__leftSide__list"></div>
-      </div>
-      <div class="chats__rightSide">
-        <p class="chats__rightSide__text">
-          Данная страница находится на стадии разработки
-        </p>
-      </div>
-    </div>
-  </body>
-</html>
+{{#> main title="Чаты" script="./chats.js"}}
+<div class="chats">
+	<div class="chats__leftSide">
+		<div class="chats__leftSide__menu">
+			<a
+				href=""
+				class="chats__leftSide__menu__link"
+				>Профиль</a
+			>
+			<form
+				action=""
+				class="chats__leftSide__menu__form"
+			>
+				<input
+					type="text"
+					class="chats__leftSide__menu__form__input"
+				/>
+			</form>
+		</div>
+		<div class="chats__leftSide__list"></div>
+	</div>
+	<div class="chats__rightSide">
+		<p class="chats__rightSide__text">Данная страница находится на стадии разработки</p>
+	</div>
+</div>
+{{/main}}
