--- a/src/pages/auth/index.html
+++ b/src/pages/auth/index.html
@@ -1,44 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
-    <style>
-      @import "./auth.scss";
-    </style>
-    <title>Авторизация</title>
-  </head>
-  <body>
-    <div class="auth">
-      <div class="auth__container">
-        <h1 class="auth__header">Вход</h1>
-        <form class="auth__form">
-          <input
-            name="login"
-            type="text"
-            class="auth__form_input"
-          />
-          <input
-            name="password"
-            type="password"
-            class="auth__form_input"
-          />
-        </form>
-        <div class="auth__buttons">
-          <button class="auth__buttons_signin">
-            Войти
-          </button>
-          <a
-            class="auth__buttons_register"
-            href="../registration/"
-            >Нет аккаунта?</a
-          >
-        </div>
-      </div>
-    </div>
-  </body>
-  <script src="./auth.js"></script>
-</html>
+{{#> main title="Авторизация" script="./auth.js"}}
+<div class="auth">
+	<div class="auth__container">
+		<h1 class="auth__header">Вход</h1>
+		<form class="auth__form">
+			<input
+				name="login"
+				type="text"
+				class="auth__form_input"
+			/>
+			<input
+				name="password"
+				type="password"
+				class="auth__form_input"
+			/>
+		</form>
+		<div class="auth__buttons">
+			<button class="auth__buttons_signin">Войти</button>
+			<a
+				class="auth__buttons_register"
+				href="../registration/"
+				>Нет аккаунта?</a
+			>
+		</div>
+	</div>
+</div>
+{{/main}}
