add profile page

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <li><a href="./pages/auth/">Авторизация</a></li>
     <li><a href="./pages/registration/">Регистрация</a></li>
     <li><a href="./pages/chats/">Чаты</a></li>
+    <li><a href="./pages/profile/">Профиль</a></li>
   </ul>
 </div>
 {{/main}}
