--- a/src/pages/chats/index.html
+++ b/src/pages/chats/index.html
@@ -3,7 +3,7 @@
 	<div class="chats__leftSide">
 		<div class="chats__leftSide__menu">
 			<a
-				href=""
+				href="../profile/"
 				class="chats__leftSide__menu__link"
 				>Профиль</a
 			>
