--- a/src/pages/errors/500.html
+++ b/src/pages/errors/500.html
@@ -4,5 +4,6 @@
   <p class="error__desc">
     Что-то пошло не так
   </p>
+  <a href="../../" class="error__link">На главную</a>
 </div>
 {{/main}}
