--- a/src/pages/auth/index.html
+++ b/src/pages/auth/index.html
@@ -3,25 +3,18 @@
 	<div class="auth__container">
 		<h1 class="auth__header">Вход</h1>
 		<form class="auth__form">
-			<input
-				name="login"
-				type="text"
-				class="auth__form_input"
-			/>
-			<input
-				name="password"
-				type="password"
-				class="auth__form_input"
-			/>
+			<div class="auth__form__inputs">
+				{{#each auth.inputs}} {{> input class='auth__form_input'}} {{/each}}
+			</div>
+			<div class="auth__buttons">
+				<button class="auth__buttons_signin">Войти</button>
+				<a
+					class="auth__buttons_register"
+					href="../registration/"
+					>Нет аккаунта?</a
+				>
+			</div>
 		</form>
-		<div class="auth__buttons">
-			<button class="auth__buttons_signin">Войти</button>
-			<a
-				class="auth__buttons_register"
-				href="../registration/"
-				>Нет аккаунта?</a
-			>
-		</div>
 	</div>
 </div>
 {{/main}}
