--- a/src/pages/registration/index.html
+++ b/src/pages/registration/index.html
@@ -3,50 +3,17 @@
 	<div class="registration__container">
 		<h1 class="registration__header">Регистрация</h1>
 		<form class="registration__form">
-			<input
-				name="first_name"
-				type="text"
-				class="registration__form_input"
-			/>
-			<input
-				name="second_name"
-				type="text"
-				class="registration__form_input"
-			/>
-			<input
-				name="login"
-				type="text"
-				class="registration__form_input"
-			/>
-			<input
-				name="email"
-				type="email"
-				class="registration__form_input"
-			/>
-			<input
-				name="phone"
-				type="tel"
-				class="registration__form_input"
-			/>
-			<input
-				name="password"
-				type="password"
-				class="registration__form_input"
-			/>
-			<input
-				name="passwordRepeat"
-				type="password"
-				class="registration__form_input"
-			/>
+			{{#each registration.inputs}} {{> input class="registration__form_input"}}
+			{{/each}}
+			<div class="registration__buttons">
+				<button class="registration__buttons_signin">Создать аккаунт</button>
+				<a
+					class="registration__buttons_register"
+					href="../auth/"
+					>Есть аккаунт?</a
+				>
+			</div>
 		</form>
-		<div class="registration__buttons">
-			<button class="registration__buttons_signin">Создать аккаунт</button>
-			<a
-				class="registration__buttons_register"
-				href="../auth/"
-				>Есть аккаунт?</a
-			>
-		</div>
 	</div>
 </div>
 {{/main}}
