--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,11 @@
-{{#> main title="Главная" script="main.js"}}
-<nav>
-  <div class="main">
-    <ul>
-      <li><a href="./pages/errors/404.html">404</a></li>
-      <li><a href="./pages/errors/500.html">500</a></li>
-      <li><a href="./pages/auth/">Авторизация</a></li>
-      <li>
-        <a href="./pages/registration/">Регистрация</a>
-      </li>
-      <li><a href="./pages/chats/">Чаты</a></li>
-      <li><a href="./pages/profile/">Профиль</a></li>
-    </ul>
-  </div>
-</nav>
-{{/main}}
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Яmessenger</title>
+  </head>
+  <body>
+    <div id="app"></div>
+    <script type="module" src="index.ts"></script>
+  </body>
+</html>
