--- a/src/pages/errors/404.html
+++ b/src/pages/errors/404.html
@@ -1,4 +1,4 @@
-{{#> main title="404" script="./errors.js"}}
+{{#> main title="404" script="./errors.ts"}}
 <div class="error">
   <h1 class="error__header">Ой!</h1>
   <p class="error__desc">Не могу найти такой страницы</p>
