--- a/src/pages/errors/500.html
+++ b/src/pages/errors/500.html
@@ -1,4 +1,4 @@
-{{#> main title="500" script="./errors.js"}}
+{{#> main title="500" script="./errors.ts"}}
 <div class="error">
   <h1 class="error__header">Ой!</h1>
   <p class="error__desc">
